Fixe scrolling issue on wrapped lines. Fixed issue with long words flowing outside of the screen. Added error object output to createRoom

--- a/private/stylesheets/main.css
+++ b/private/stylesheets/main.css
@@ -14,13 +14,13 @@ ul {
     padding: 0;
 }
 
+li {
+    word-wrap: break-word;
+}
+
 pre {
     padding: 0;
     margin: 0;
-}
-
-#input {
-    padding-bottom: 1em;
 }
 
 #marker {
